# Distributed-Database

./: .env  .gitignore  ARCHITECTURE_REPORT.md  Distributed_DB_Final_Report_v2.docx  README.md  docker-compose.yaml  failover_demo.sh  seed.sh  test_cluster.sh
DDB Tasks/Bonus Task/: bonus.go  readme.txt
DDB Tasks/Task 1/: agent.go  master.go  readme.txt
DDB Tasks/Task 2/: mapreduce.go  readme.txt
DDB Tasks/Task 3/: Hashing.go  readme.txt
api-gateway/: Dockerfile  Readme.md  go.mod
api-gateway/cmd/gateway/: main.go
api-gateway/config/: config.go  gateway.json  gateway.yaml
api-gateway/internal/auth/: hmac.go  hmac_test.go  middleware.go  strip.go
api-gateway/internal/health/: proxy.go
api-gateway/internal/ratelimit/: bucket.go  bucket_test.go
api-gateway/internal/router/: router.go  router_test.go
gui/: Dockerfile  app.py
master/: Dockerfile  dockerfile  go.mod  master.wal
master/config/: config.go  master.json
master/internal/api/: auth_middleware.go  handler.go
master/internal/auth/: signer.go
master/internal/cluster/: registry.go
master/internal/db/: store.go
master/internal/election/: election.go
master/internal/query/: executor.go  parser.go  parser_test.go
master/internal/replication/: replicator.go
master/internal/wal/: wal.go  wal_test.go
scripts/: mysql-init.sql
worker-node1/: CMakeLists.txt  Dockerfile
worker-node1/include/: crow_all.h
worker-node1/src/: main.cpp
worker-node1/src/analytics/: analytics.hpp
worker-node1/src/auth/: hmac.hpp
worker-node1/src/db/: mysql_client.cpp  mysql_client.hpp
worker-node1/src/replication/: receiver.hpp
worker-node2/: Dockerfile  requirements.txt
worker-node2/app/: auth.py  main.py
worker-node2/app/db/: engine.py
worker-node2/app/routes/: query.py  replication.py  search.py
worker-node2/venvs/: pyvenv.cfg
